@@ -233,6 +233,8 @@ class tx_felogin_pi1 extends tslib_pibase {
 		$subpart = $this->cObj->getSubpart($this->template, '###TEMPLATE_LOGIN###');
 		$subpartArray = $linkpartArray = array();
 
+		$gpRedirectUrl = ''; 
+
 		$markerArray['###LEGEND###'] = $this->pi_getLL('oLabel_header_welcome', '', 1);
 
 		if($this->logintype === 'login') {
@@ -257,6 +259,7 @@ class tx_felogin_pi1 extends tslib_pibase {
 					// login error
 				$markerArray['###STATUS_HEADER###'] = $this->getDisplayText('error_header',$this->conf['errorHeader_stdWrap.']);
 				$markerArray['###STATUS_MESSAGE###'] = $this->getDisplayText('error_message',$this->conf['errorMessage_stdWrap.']);
+				$gpRedirectUrl = t3lib_div::_GP('redirect_url');
 			}
 		} else {
 			if($this->logintype === 'logout') {
@@ -300,7 +303,7 @@ class tx_felogin_pi1 extends tslib_pibase {
 		$markerArray['###PASSWORD_LABEL###'] = $this->pi_getLL('password', '', 1);
 		$markerArray['###STORAGE_PID###'] = $this->spid;
 		$markerArray['###USERNAME_LABEL###'] = $this->pi_getLL('username', '', 1);
-		$markerArray['###REDIRECT_URL###'] = htmlspecialchars($this->redirectUrl);
+		$markerArray['###REDIRECT_URL###'] = $gpRedirectUrl ? htmlspecialchars($gpRedirectUrl) : htmlspecialchars($this->redirectUrl);
 		$markerArray = array_merge($markerArray, $this->getUserFieldMarkers());
 
 		if ($this->flexFormValue('showForgotPassword','sDEF') || $this->conf['showForgotPasswordLink']) {
@@ -408,7 +411,7 @@ class tx_felogin_pi1 extends tslib_pibase {
 							}
 						break;
 					}
-				} elseif ($this->logintype === 'logout' || !$this->logintype) { // after logout
+				} elseif ($this->logintype === 'logout') { // after logout
 
 					// Hook for general actions after after logout has been confirmed
 					if ($this->logintype === 'logout' && $GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['felogin']['logout_confirmed']) {
@@ -430,6 +433,10 @@ class tx_felogin_pi1 extends tslib_pibase {
 				} else { // not logged in
 						// Placeholder for maybe future options
 					switch ($redirMethod) {
+						case 'getpost':
+							// preserve the get/post value
+							$redirect_url = $this->redirectUrl;
+						break;
 					}
 				}
 
